Bug 326274 - Newly created shared wireless network cannot be seen if disconnected once
Summary: Newly created shared wireless network cannot be seen if disconnected once
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-19 17:39 UTC by Volkan
Modified: 2024-12-23 18:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.3.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volkan 2013-10-19 17:39:00 UTC
Creating a shared wireless network is problematic. Sometimes the network may not be reachable and it is not being listed on devices.

Reproducible: Always

Steps to Reproduce:
1. Create a shared wireless network from wired
2. Make it available on other devices
3. Disconnect from the same computer that the connection has been created
4. Create another connection
Actual Results:  
New created network cannot be seen in either of the devices.

Expected Results:  
Nmanager and other device should list the connection with its SSID.
Comment 1 Jan Grulich 2013-10-19 19:44:12 UTC
Which plasma networkmanagement applet do you use? The old one or the new one called plasma-nm? If you use the latest Kubuntu 13.10, then you use the new one.
Comment 2 Volkan 2013-10-20 11:21:16 UTC
Yes, it is the new one. I am using Kubuntu 13.10 and removed the old applet.
Comment 3 Jan Grulich 2013-10-30 15:00:16 UTC
Git commit 87e2b1de626e8160b9f5414c479886f4904e43c7 by Jan Grulich.
Committed on 30/10/2013 at 14:59.
Pushed by grulich into branch 'master'.

Allow to have same connections under different names

i.e you can have two connections for some AP with different IPv4 configuration, before there was only one of them

M  +2    -15   declarative-plugins/model/model.cpp
M  +13   -9    declarative-plugins/model/modelitem.cpp

http://commits.kde.org/plasma-nm/87e2b1de626e8160b9f5414c479886f4904e43c7
Comment 4 Jan Grulich 2013-10-30 15:02:29 UTC
The issue when you disconnect a shared connection and this connection is removed is already fixed in master. The fix above probably fixes the second part of your issue when you create a shared connection with ssid which already exists.
Comment 5 Volkan 2013-11-11 11:20:10 UTC
Should this patch have affected version 4.11.3? Because I'm having the same problem.
Comment 6 Jan Grulich 2013-11-11 11:48:17 UTC
It doesn't depend on version of KDE, plasma-nm is distributed separately.
Comment 7 Ben Cooksley 2024-12-23 18:25:58 UTC
Bulk transfer as requested in T17796