Allow to have same connections under different names

i.e you can have two connections for some AP with different IPv4 configuration, before there was only one of them

BUG:326274